--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -20,6 +20,12 @@
             $routeProvider.when("/products", {
                 templateUrl: "views/productList.html"
             });
+            $routeProvider.when("/placeorder", {
+                templateUrl: "views/placeOrder.html"
+            });
+            $routeProvider.when("/complete", {
+                templateUrl: "views/thankYou.html"
+            });
             $routeProvider.otherwise({
                 templateUrl: "views/productList.html"
             });
